[package]
name = "osc-bridge"
version = "0.1.0"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
clap = "2.33"
futures = "0.3"
get_if_addrs = "0.5"
log = "0.4"
mdns = "1.1"
pretty_env_logger = "0.4"
rosc = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["udp", "codec"] }
toml = "0.5"